# sphinx-zoomable-svg

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  release.yml  tests.yml
docs/: conf.py  index.rst
sphinx_zoomable_images/: __init__.py
sphinx_zoomable_images/static/css/: zoomable-images.css
sphinx_zoomable_images/static/js/: zoomable-images.js
tests/: conftest.py  test_directive.py
tests/roots/test-zoomable/: conf.py  index.rst
tests/roots/test-zoomable/subdir/: page.rst
