[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-zoomable-images"
version = "0.1.0"
description = "Sphinx extension providing a zoomable-figure directive with pan, zoom, and fullscreen support"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.9"
dependencies = ["sphinx>=5.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
]

[project.urls]
Homepage = "https://github.com/bngoy/sphinx-zoomable-svg"
Repository = "https://github.com/bngoy/sphinx-zoomable-svg"
Issues = "https://github.com/bngoy/sphinx-zoomable-svg/issues"

[project.optional-dependencies]
test = ["pytest", "beautifulsoup4"]

[tool.setuptools.packages.find]
include = ["sphinx_zoomable_images*"]

[tool.setuptools.package-data]
sphinx_zoomable_images = ["static/**/*"]
