[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-zoomable-images"
dynamic = ["version"]
description = "Sphinx extension providing a zoomable-figure directive with pan, zoom, and fullscreen support"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.11"
dependencies = ["sphinx>=9.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
]

[project.urls]
Homepage = "https://github.com/bngoy/sphinx-zoomable-svg"
Repository = "https://github.com/bngoy/sphinx-zoomable-svg"
Issues = "https://github.com/bngoy/sphinx-zoomable-svg/issues"

[project.optional-dependencies]
test = ["pytest", "beautifulsoup4"]
dev = ["pytest", "beautifulsoup4", "ruff"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["sphinx_zoomable_images*"]

[tool.setuptools.package-data]
sphinx_zoomable_images = ["static/**/*"]
